examples, tests: add blackpill to BOARD_INSUFFICIENT_MEMORY

--- a/tests/cortexm_common_ldscript/Makefile
+++ b/tests/cortexm_common_ldscript/Makefile
@@ -11,6 +11,7 @@ BOARD_WHITELIST += samr21-xpro
 BOARD_WHITELIST += arduino-mkr1000
 BOARD_WHITELIST += arduino-mkrfox1200
 BOARD_WHITELIST += arduino-mkrzero
+BOARD_WHITELIST += blackpill
 BOARD_WHITELIST += bluepill
 BOARD_WHITELIST += feather-m0
 BOARD_WHITELIST += opencm904
