--- a/tests/gnrc_netif/Makefile
+++ b/tests/gnrc_netif/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.tests_common
 
 BOARD_INSUFFICIENT_MEMORY := airfy-beacon arduino-duemilanove arduino-mega2560 \
-                             arduino-uno b-l072z-lrwan1 bluepill calliope-mini \
+                             arduino-uno b-l072z-lrwan1 blackpill bluepill calliope-mini \
                              cc2650-launchpad cc2650stk chronos hifive1 \
                              maple-mini mega-xplained microbit \
                              msb-430 msb-430h nrf51dongle nrf6310 \
