--- a/tests/pkg_fatfs/Makefile
+++ b/tests/pkg_fatfs/Makefile
@@ -9,7 +9,7 @@ FEATURES_OPTIONAL += periph_rtc
 # this list is composed of boards that support spi/gpio + native
 BOARD_WHITELIST := airfy-beacon arduino-due arduino-duemilanove arduino-mega2560 \
                    arduino-mkr1000 arduino-mkrzero arduino-uno arduino-zero avsextrem \
-                   b-l072z-lrwan1 b-l475e-iot01a bluepill cc2538dk ek-lm4f120xl \
+                   b-l072z-lrwan1 b-l475e-iot01a blackpill bluepill cc2538dk ek-lm4f120xl \
                    feather-m0 fox frdm-k22f frdm-k64f ikea-tradfri iotlab-a8-m3 \
                    iotlab-m3 limifrog-v1 maple-mini msb-430 msb-430h msba2 msbiot \
                    mulle nrf52840dk nrf52dk nrf6310 nucleo-f207zg nucleo-f303ze \
